# ardumiata

./: .gitignore  CMakeLists.txt  README.md
kicad/main_pcb/: fp-lib-table  local_symlib.kicad_sym  main_pcb.kicad_pcb  main_pcb.kicad_pro  main_pcb.kicad_sch  sym-lib-table
kicad/main_pcb/local_footlib.pretty/: Iduino_ST1143.kicad_mod
src/: buzzer.cpp  buzzer.hpp  display.cpp  display.hpp  display_debug.cpp  display_release.cpp  ect.cpp  ect.hpp  lcdi2c.cpp  lcdi2c.hpp  main.cpp  sensors.cpp  sensors.hpp  voltage.cpp  voltage.hpp
